# Energy-management-platform

./: .env.example  .replit  README.md  ai_recommendations.py  anomaly_detection.py  app.py  config.py  data_processor.py  database.py  energy_tracker.db  gamification.py  hardware_simulator.py  mqtt_client.py  notifications.py  pyproject.toml  replit.md  requirements.txt  scratch.gitignore  thingsboard_client.py  thingsboard_sync.py
.streamlit/: config.toml
attached_assets/: Pasted-Perfect-Here-s-a-fully-Python-based-all-in-one-project-prompt-that-integrates-IoT-devices-ThingsB-1757689679493_1757689679494.txt
ui/: __init__.py  components.py  theme.py
